fix plus minus on firefox
- added missing whitespace removed cause of +/- (copy/paste)
- fixed addition + missing on first line because original css already had a css selector for .source::before that replace our
- fix color of addition + that was red to green

fixes #328

--- a/src/diff-pluses-and-minuses/diff-pluses-and-minuses.css
+++ b/src/diff-pluses-and-minuses/diff-pluses-and-minuses.css
@@ -1,9 +1,15 @@
 .addition > .source:before {
-    content: '+';
-    color: #a67f59;
+    content: '+' !important;
+    color: #5aaf59 !important;
+    position: initial !important;
+    border: none !important;
+    margin-right: -0.6em;
 }
 
 .deletion > .source:before {
-    content: '-';
-    color: #a67f59;
+    content: '-' !important;
+    color: #a67f59 !important;
+    position: initial !important;
+    border: none !important;
+    margin-right: -0.6em;
 }
